--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World!
+<html>
+  <head>
+    Björn Claremar
+  </head>
+  <body>
+    Hello World!
+
+    So this is my homepage?
+    
+  </body>
+<html>  
+
